fixed code wrapping

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -140,15 +140,15 @@ a.sidebar-nav-subitem:focus {
   padding-bottom: 4rem;
 }
 
-@media (min-width: 60em) {
+@media (min-width: 53em) {
   .content {
-    max-width: 60rem;
+    max-width: 53rem;
     margin-left: 20rem;
     margin-right: 2rem;
   }
 }
 
-@media (min-width: 68em) {
+@media (min-width: 64em) {
   .content {
     margin-left: 22rem;
     margin-right: 4rem;
